--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Kiru OS v30.3 - THE FINAL JUBILEE</title>
+    <title>Kiru OS v30.4 - MEGA UPDATE</title>
     <style>
         :root { 
             --bg: #000; --main: #0A84FF; --txt: #fff; 
@@ -73,7 +73,7 @@
 
     <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:15px; padding: 0 5px;">
         <div>
-            <h1 style="margin:0; font-size: 24px; font-weight: 800;">Kiru OS <span style="color:var(--main)">v30.3</span></h1>
+            <h1 style="margin:0; font-size: 24px; font-weight: 800;">Kiru OS <span style="color:var(--main)">v30.4</span></h1>
             <div style="font-size: 10px; opacity: 0.5;">● Система активна</div>
         </div>
         <div style="display:flex; gap:8px;">
@@ -114,11 +114,15 @@
 
     <div id="shopWin" class="modal">
         <h2 id="l-sh-title">Market</h2>
-        <div style="display:grid; grid-template-columns: 1fr 1fr; gap:10px; max-height:40vh; overflow-y:auto;">
+        <div style="display:grid; grid-template-columns: 1fr 1fr; gap:10px; max-height:50vh; overflow-y:auto;">
             <div class="top-item" style="flex-direction:column;">🤖 Auto +1<button class="btn" onclick="buy('auto', 5000, 1)">5k</button></div>
             <div class="top-item" style="flex-direction:column;">⚡ Mult +2<button class="btn" onclick="buy('multi', 2000, 2)">2k</button></div>
+            <div class="top-item" style="flex-direction:column;">🏭 Factory +50<button class="btn" onclick="buy('auto', 100000, 50)">100k</button></div>
+            <div class="top-item" style="flex-direction:column;">🚀 Turbo +10<button class="btn" onclick="buy('multi', 50000, 10)">50k</button></div>
             <div class="top-item" style="flex-direction:column;">💎 [VIP]<button class="btn" onclick="buy('prefix', 1500, 'VIP')">1.5k</button></div>
-            <div class="top-item" style="flex-direction:column;">👑 [OWNER]<button class="btn" onclick="buy('prefix', 10000, 'OWNER')">10k</button></div>
+            <div class="top-item" style="flex-direction:column;">🔥 [HACKER]<button class="btn" onclick="buy('prefix', 50000, 'HACKER')">50k</button></div>
+            <div class="top-item" style="flex-direction:column;">🌙 Night Name<button class="btn" onclick="buy('color', 10000, '#A855F7')">10k</button></div>
+            <div class="top-item" style="flex-direction:column;">👑 [OWNER]<button class="btn" onclick="buy('prefix', 500000, 'OWNER')">500k</button></div>
         </div>
         <button class="btn" onclick="closeMod('shopWin')" style="width:100%; margin-top:15px;">Закрыть</button>
     </div>
@@ -129,6 +133,7 @@
         <label>Язык:</label> <select id="lSel" onchange="changeLang(this.value)"><option value="ru">Русский</option><option value="en">English</option></select>
         <hr style="opacity:0.1; margin:15px 0;">
         <button class="btn btn-orange" onclick="openMod('thanksWin')" style="width:100%;">🌟 Благодарности</button>
+        <button class="btn btn-red" onclick="resetItems()" style="width:100%; margin-top:8px;">🗑️ Сбросить улучшения</button>
         <button class="btn btn-red" onclick="logout()" style="width:100%; margin-top:8px;">Выход</button>
         <button class="btn" onclick="closeMod('sMenu')" style="width:100%; margin-top:10px;">X</button>
     </div>
@@ -153,7 +158,8 @@
         <div style="display:grid; grid-template-columns: 1fr 1fr; gap:10px;">
             <button class="btn" onclick="sendMoney()" id="l-send">💸 Донат</button>
             <button class="btn btn-orange" onclick="adminMute()">Mute</button>
-            <button class="btn btn-red" onclick="adminDelUser()" id="l-del">Удалить</button>
+            <button class="btn btn-orange" onclick="adminUnmute()">Unmute</button>
+            <button class="btn btn-red" onclick="adminResetMoney()">Обнулить $</button>
             <button class="btn" onclick="closeMod('pCard')">X</button>
         </div>
     </div>
@@ -168,6 +174,7 @@
         let user = JSON.parse(localStorage.getItem('k_user_v30'));
         let gid, myRole, viewUser;
         let mClicks = 0;
+        let musyaClaimed = false; // ФИКС: Чтобы давала один раз
 
         const langData = {
             ru: {bal:"Баланс", chat:"Чат", games:"Игры", tap:"ТАП ТАП ТАП", set:"Настройки", sh:"Магазин", send:"Перевести", del:"Удалить", cancel:"Отмена"},
@@ -179,8 +186,7 @@
             document.getElementById('l-bal').innerText = d.bal; document.getElementById('l-chat').innerText = d.chat;
             document.getElementById('l-games').innerText = d.games; document.getElementById('l-tap').innerText = d.tap;
             document.getElementById('l-set').innerText = d.set; document.getElementById('l-sh-title').innerText = d.sh;
-            document.getElementById('l-send').innerText = d.send; document.getElementById('l-del').innerText = d.del;
-            document.getElementById('l-cancel').innerText = d.cancel;
+            document.getElementById('l-send').innerText = d.send; document.getElementById('l-cancel').innerText = d.cancel;
         };
 
         async function init() {
@@ -199,16 +205,18 @@
 
         window.doClick = () => update(ref(db, 'users/'+user.name), {score: (Number(user.score) || 0) + (user.mult || 1)});
 
-        // EASTER EGG SYSTEM
+        // EASTER EGG FIXED (ONLY ONCE)
         document.getElementById('musyaEaster').onclick = () => {
+            if(musyaClaimed) return alert("Муся уже дала тебе всё, что могла ❤️");
             mClicks++;
             if(mClicks === 5) {
                 const bonus = 10000;
                 update(ref(db, 'users/'+user.name), {score: Number(user.score) + bonus});
                 const oldBg = document.body.style.background;
                 document.body.style.background = '#ff69b4';
-                alert("💖 Муся дарит тебе 10,000 коинов!");
+                alert("💖 Муся дарит тебе 10,000 коинов! (Больше нельзя)");
                 setTimeout(() => { document.body.style.background = oldBg; }, 1000);
+                musyaClaimed = true; 
                 mClicks = 0;
             }
         };
@@ -232,7 +240,7 @@
                     l.innerHTML += `<div class="msg">
                         <span class="msg-del" onclick="adminDelMsg('${d.key}')">×</span>
                         <span class="prefix" style="background:${m.col||'#fff'}">${m.pref||'USER'}</span>
-                        <b onclick="showP('${m.n}')">${m.n}</b>: ${m.t}
+                        <b onclick="showP('${m.n}')" style="color:${m.col||'inherit'}">${m.n}</b>: ${m.t}
                         <div class="msg-time">${date}</div>
                     </div>`;
                 });
@@ -256,7 +264,7 @@
         window.showP = async n => {
             viewUser = n; const s = await get(ref(db, 'users/'+n)); const d = s.val();
             document.getElementById('pc-name').innerText = n;
-            document.getElementById('pc-stats').innerHTML = `💰: ${d.score} | 🤖: ${d.autoclicker}`;
+            document.getElementById('pc-stats').innerHTML = `💰: ${d.score} | 🤖: ${d.autoclicker} | ⚡: ${d.mult}`;
             openMod('pCard');
         };
 
@@ -270,8 +278,17 @@
             }
         };
 
-        window.adminMute = () => { if(prompt("Pass:")==="8070") update(ref(db, 'users/'+viewUser), {muteUntil: Date.now()+600000}); };
-        window.adminDelUser = () => { if(prompt("Pass:")==="8070") { remove(ref(db, 'users/'+viewUser)); closeMod('pCard'); }};
+        // ADMIN ACTIONS
+        window.adminMute = () => { if(prompt("Pass:")==="8070") update(ref(db, 'users/'+viewUser), {muteUntil: Date.now()+3600000}); };
+        window.adminUnmute = () => { if(prompt("Pass:")==="8070") update(ref(db, 'users/'+viewUser), {muteUntil: 0}); };
+        window.adminResetMoney = () => { if(prompt("Pass:")==="8070") update(ref(db, 'users/'+viewUser), {score: 0}); };
+
+        window.resetItems = () => {
+            if(confirm("Вы уверены, что хотите сбросить все улучшения? Деньги останутся.")){
+                update(ref(db, 'users/'+user.name), {autoclicker: 0, mult: 1, prefix: '', color: ''});
+                alert("Сброшено!");
+            }
+        };
 
         window.startMM = async type => {
             const q = ref(db, 'queue_'+type); const s = await get(q);
@@ -310,7 +327,8 @@
             let up = {score: Number(user.score) - p};
             if(t==='auto') up.autoclicker = (user.autoclicker||0)+v;
             if(t==='multi') up.mult = (user.mult||1)+v;
-            if(t==='prefix') { up.prefix = v; up.color = v==='VIP'?'#FFD700':'#FF2D55'; }
+            if(t==='prefix') { up.prefix = v; if(v==='HACKER') up.color = '#32D74B'; }
+            if(t==='color') up.color = v;
             await update(ref(db, 'users/'+user.name), up); alert("Куплено!");
         };
 
@@ -323,6 +341,8 @@
     </script>
 </body>
 </html>
+
+
 
 
 
